// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with Seasons 1`] = `
<div
  id="menu-bar-container"
>
  <div
    className="header-vertical-alignment"
    id="search-field"
  >
    <form>
      <input
        onChange={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        placeholder="Search undefined"
        type="text"
        value=""
      />
    </form>
  </div>
  <div
    id="menu-bar-selection"
    onMouseDown={[Function]}
  >
    <div
      className="entry-selection"
      onClick={[Function]}
    >
      Test Season
    </div>
  </div>
</div>
`;

exports[`renders correctly with Teams 1`] = `
<div
  id="menu-bar-container"
>
  <div
    className="header-vertical-alignment"
    id="search-field"
  >
    <form>
      <input
        onChange={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        placeholder="Search undefined"
        type="text"
        value=""
      />
    </form>
  </div>
  <div
    id="menu-bar-selection"
    onMouseDown={[Function]}
  >
    <div
      className="entry-selection"
      onClick={[Function]}
    >
      Fake team
    </div>
  </div>
</div>
`;
